# chatui-using-answerapi

./: .gitignore  Dockerfile  Makefile  README.ja.md  README.md  answer.py  config.py  main.py  pyproject.toml  refresh_datastore.py  search.py  serve.py  utils.py
data/: bq-import.sh  kaijuu.csv
terraform/: main.tf
